--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "celer-type",
+  "name": "celer-types",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "yarn generate:defs && yarn generate:meta && tsc",
-    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --package celer-pay-typegen/interfaces --input ./src/interfaces",
-    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --package celer-pay-typegen/interfaces --endpoint ./celer.json --output ./src/interfaces --strict",
+    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --package celer-types/interfaces --input ./src/interfaces",
+    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --package celer-types/interfaces --endpoint ./celer.json --output ./src/interfaces --strict",
     "lint": "tsc --noEmit --pretty"
   },
   "dependencies": {
