--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       // this is specific with augmented overrides
       "paths": {
         // this is the package name we use (in the interface imports, --package for generators)
-        "celer-type/*": ["src/*"],
+        "celer-types/*": ["src/*"],
         "@polkadot/api/augment": ["src/interfaces/augment-api.ts"],
         // replace the augmented types with our own, as generated from definitions
         "@polkadot/types/augment": ["src/interfaces/augment-types.ts"]
