--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "tsc --noEmit --pretty"
   },
   "dependencies": {
-    "@polkadot/api": "^1.4.0"
+    "@polkadot/api": "^1.24.1"
   },
   "devDependencies": {
     "@polkadot/typegen": "^1.4.0",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.2"
   },
   "author": "Tatsuki Hashimoto",
