--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
       // this is specific with augmented overrides
       "paths": {
         // this is the package name we use (in the interface imports, --package for generators)
-        "celer-types/*": ["src/*"],
+        "celer-types/*": ["./src/*"],
         "@polkadot/api/augment": ["src/interfaces/augment-api.ts"],
         // replace the augmented types with our own, as generated from definitions
         "@polkadot/types/augment": ["src/interfaces/augment-types.ts"]
       },
       // some other options, whatever you want for your environment
-      "target": "esnext",
-      "module": "esnext",
+      "target": "es2017",
+      "module": "commonjs",
       "jsx": "preserve",
       "declaration": true,
       "strict": true,
