--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "tsc --noEmit --pretty"
   },
   "dependencies": {
-    "@polkadot/api": "^1.24.1"
+    "@polkadot/api": "^1.23.1"
   },
   "devDependencies": {
-    "@polkadot/typegen": "^1.4.0",
+    "@polkadot/typegen": "^1.23.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "rxjs": "^6.6.2"
   },
   "author": "Tatsuki Hashimoto",
   "license": "ISC"
